--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,6 @@
 <div id="searchContainer">
     <img src="https://media.vneconomy.vn/images/upload/2022/10/21/59034c7b-0a36-40c2-b6e9-8b666f368092.png">
-    <div id="searchBar">
-      <select name="GaDi" id="">
-      </select>
-      <select name="GaDi" id="">
-      </select>
-      <select name="GaDi" id="">
-      </select>
-      <select name="GaDi" id="">
-      </select>
-      <button>Tìm kiếm</button>
-    </div>
+    <app-search-bar></app-search-bar>
   </div>
   <h1>Giới thiệu</h1>
     <p>- Tổng công ty Đường sắt Việt Nam. Số 118 đường Lê Duẩn, Phường Cửa Nam, Quận Hoàn Kiếm, Thành phố Hà Nội, Việt Nam.<br>
@@ -26,5 +16,4 @@
   <div id="footer">
       
   </div>
-  
   
