--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -20,6 +20,7 @@
   font-size: 18px;
   display: flex;
   justify-content: center;
+  font-size: 1.3vw;
 }
 .mnItem{
   padding-right: 60px;
@@ -28,7 +29,6 @@ a{
   
   text-decoration: none;
   color: black;
-  
 }
 
 img{
@@ -40,6 +40,7 @@ img{
   margin-right: 6%;
   height: 10px;
   cursor: pointer;
+  height: 100%;
 }
 #btnKiemTra{
   position: relative;
@@ -50,6 +51,7 @@ img{
   text-align: center;
   background-color: #A5AECF;
   position: fixed;
+  z-index: 1;
 }
 .dropDownMN:hover .dropDownContent{
   display: flex;
