--- a/src/app/kiemtrave/doichuyen/xndoichuyen/xndoichuyen.component.html
+++ b/src/app/kiemtrave/doichuyen/xndoichuyen/xndoichuyen.component.html
@@ -1,20 +1,30 @@
 <h1 style="text-align:center;">Đổi chuyến</h1>
 <p style="text-align: center;">Chọn chuyến <b>> Xác thực thông tin</b></p>
 <div class="xndoichuyen">
-    <label for="mave">Mã vé:</label>
-    &nbsp;&nbsp;&nbsp;&nbsp;
-    <input type="text" id="mave" name="mave">
-    &nbsp;&nbsp;&nbsp;&nbsp;
-    <label for="sdt">Số điện thoại mua vé:</label>
-    &nbsp;&nbsp;&nbsp;&nbsp;
-    <input type="text" id="sdt" name="sdt"> 
-    &nbsp;&nbsp;&nbsp;&nbsp;<br>
-    <label for="maxn">Mã xác nhận:</label>
-    &nbsp;&nbsp;&nbsp;&nbsp; 
-    <input type="text" id="maxn" name="maxn"><br>
+    <table >
+        <tr>
+            <td>
+                <label for="mave">Mã vé:</label>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="mave" name="mave" style="margin-left: 14%; margin-bottom: 20px;">
+            </td>
+            <td>
+                <label for="sdt">Số điện thoại mua vé:</label>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="text" id="sdt" name="sdt" style="margin-bottom: 20px;"> 
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="maxn">Mã xác nhận:</label>
+                &nbsp;&nbsp;&nbsp;&nbsp; 
+                <input type="text" id="maxn" name="maxn" style="margin-bottom: 20px;">
+            </td>
+        </tr>
+    </table>
     <p><u>Vui lòng nhập mã xác nhận được gửi đến số điện thoại để xác nhận danh tính! </u></p>
      <button style="background-color: #ACD5E9; border: 2px solid #ACD5E9;border-radius: 3px;
-               margin-left: 400px; ">
+               margin-left: 80%; ">
         Xác nhận
      </button>
      
