--- a/src/app/kiemtrave/hoanve/hoanve.component.css
+++ b/src/app/kiemtrave/hoanve/hoanve.component.css
@@ -1,9 +1,14 @@
 .hoanve{
     border: 2px solid #D9D9D9;
-   height:150px;
-   width: 600px;
+   width: 43%;
    padding: 20px;
    border-radius: 15px;
    margin: 10px;
-   margin-left: 400px;
+   margin-left: 30%;
+   justify-content: center;
+   text-align: center;
+   }
+   .hv{
+    text-align: center;
+    justify-content: center;
    }
