--- a/src/app/kiemtrave/kqktrave/kqktrave.component.html
+++ b/src/app/kiemtrave/kqktrave/kqktrave.component.html
@@ -12,15 +12,15 @@
      <p>Trạng thái vé:</p>
     </div>
     <div>
-        <a  [routerLink]="['/kiemtrave/doichuyen']">
+        <a  routerLink="/doichuyen">
             <button style="background-color: #ACD5E9; border: 2px solid #ACD5E9;border-radius: 3px;
-            margin-left: 500px;  " (click)="onChuyenve()" >
+            margin-left: 70%;  " (click)="onChuyenve()" >
     Chuyến vé
     </button>
         </a>
-          <a  [routerLink]="['/kiemtrave/hoanve']">
+          <a  routerLink="/hoanve">
             <button style="background-color: #ACD5E9; border: 2px solid #ACD5E9;border-radius: 3px;
-                    margin-left: 6px; " (click)="onHoanve()" >
+                    margin-left: 6%; " (click)="onHoanve()" >
          Hoàn vé
           </button>
           </a>
