--- a/src/app/thongtindatcho/thongtindatcho.component.html
+++ b/src/app/thongtindatcho/thongtindatcho.component.html
@@ -38,7 +38,7 @@
                 <label for="onlbk">Số tài khoản(nếu chọn thanh toán bằng online baking)</label>
                 <input type="text" id="onlbk" name="onlbk"><br>
                 <button style="background-color: #ACD5E9; border: 2px solid #ACD5E9;border-radius: 3px;
-                margin-left: 230px ">
+                margin-left: 80% ">
                 Thanh toán
                 </button>
             </div>
