--- a/src/app/huongdan/huongdan.component.css
+++ b/src/app/huongdan/huongdan.component.css
@@ -1,8 +1,17 @@
+.hd{justify-content: center;}
+.td{
+  justify-content: center;
+  margin-left: 10%;
+}
 .rule {
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
+    margin-left: 20%;
+    justify-content: center;
   }
 .video{
   margin: 10px;
-  margin-left: 350px;
+  margin-left: 25%;
+  margin-top: 3%;
+  justify-content: center;
 }
