--- a/src/app/huongdan/huongdan.component.html
+++ b/src/app/huongdan/huongdan.component.html
@@ -1,20 +1,24 @@
-
-        <title>Màn hình hướng dẫn đặt vé video </title>
-        <div class="rule">
-            <h1>Màn hình hướng dẫn hoàn vé video</h1>
-            <div class="video">
-                <video width="640" height="360" controls>
-                    <source src="https://www.youtube.com/watch?v=ZYeqjr56vv4" >
-                </video>
-            </div>
+<div class="hd">
+    <div class="td">
+        <h1>Hướng dẫn</h1>
+    </div>
+    <div class="rule">
+        <h1>Màn hình hướng dẫn hoàn vé video</h1>
+        <div class="video">
+            <video width="640" height="360" controls>
+                <source src="https://www.youtube.com/watch?v=ZYeqjr56vv4" >
+            </video>
         </div>
-        <div class="rule">
-            <h1>Màn hình hướng dẫn đặt vé video</h1>
-            <div class="video">
-                <video width="640" height="360" controls>
-                    <source src="https://www.youtube.com/watch?v=RmrgjSW1K8A" type="video/mp4">
-                </video>
-            </div>
+    </div>
+    <div class="rule">
+        <h1>Màn hình hướng dẫn đặt vé video</h1>
+        <div class="video">
+            <video width="640" height="360" controls>
+                <source src="https://www.youtube.com/watch?v=RmrgjSW1K8A" type="video/mp4">
+            </video>
         </div>
+    </div>
+</div>
+       
 
 
