--- a/src/app/kiemtrave/doichuyen/doichuyen.component.css
+++ b/src/app/kiemtrave/doichuyen/doichuyen.component.css
@@ -1,9 +1,10 @@
 .doichuyen{
     border: 2px solid #D9D9D9;
-   height:150px;
-   width: 500px;
+   width: 40%;
    margin: 20px;
    padding: 20px;
    border-radius: 15px;
-   margin-left: 400px;
+   margin-left: 30%;
+   justify-content: center;
+  
    }
