--- a/src/app/kiemtrave/doichuyen/xndoichuyen/xndoichuyen.component.css
+++ b/src/app/kiemtrave/doichuyen/xndoichuyen/xndoichuyen.component.css
@@ -1,9 +1,10 @@
 .xndoichuyen{
     border: 2px solid #D9D9D9;
-   height:150px;
-   width: 500px;
+
+   width: 37%;
    margin: 20px;
    padding: 20px;
    border-radius: 15px;
-   margin-left: -35px;
+   margin-left: 35%;
+   justify-content: center;
    }
