--- a/src/app/kiemtrave/kiemtrave.component.css
+++ b/src/app/kiemtrave/kiemtrave.component.css
@@ -1,16 +1,16 @@
 .row{
     border: 2px solid #D9D9D9;
     margin: 50px;
-    width: 700px;
-    height: 100px;
+    width: 55%;
     padding: 20px;
     text-align: center;
     border-radius: 15px;
-    margin-left: 300px;
+    margin-left: 25%;
+    justify-content: center;
     }
 .tieude{
     margin: 10px;
-    margin-left: 600px;
+    margin-left: 49%;
     margin-bottom: -15px;
   
 }
