--- a/src/app/kiemtrave/kqktrave/kqktrave.component.css
+++ b/src/app/kiemtrave/kqktrave/kqktrave.component.css
@@ -1,10 +1,9 @@
 .kq{
-    border: 2px solid black;
+    border: 1px solid black;
     margin: 50px;
-    height:300px;
-    width: 700px;
+    width: 55%;
     padding: 20px;
-    margin-left: 300px;
+    margin-left: 25%;
     text-align:left;
     margin-top: -50px;
     }
