--- a/src/app/ktrakhuyenmai/ktrakhuyenmai.component.css
+++ b/src/app/ktrakhuyenmai/ktrakhuyenmai.component.css
@@ -1,21 +1,23 @@
 .ktrakhuyenmai{
     border: 2px solid #D9D9D9;
-   height:50px;
-   width: 450px;
+   width: 30%;
    padding: 12px;
    border-radius: 15px;
    margin: 10px;
-   margin-left: 500px;
+   margin-left: 35%;
+   justify-content: center;
    }
    .tieude{
     margin-top: 40px;
     margin: 10px;
-    margin-left: 600px;
+    margin-left: 40%;
     margin-bottom: 30px;
+    justify-content: center;
     
 }
 .kqtimkiem{
 margin: 10px;
-margin-left: 500px;
+margin-left: 35%;
+justify-content: center;
 
 }
