--- a/src/app/ktrakhuyenmai/ktrakhuyenmai.component.html
+++ b/src/app/ktrakhuyenmai/ktrakhuyenmai.component.html
@@ -5,7 +5,7 @@
 <div class="ktrakhuyenmai">
     <label for="ktrakm">Kiểm tra khuyến mãi: </label>    &nbsp;&nbsp;&nbsp;&nbsp;
     <input type="text" [(ngModel)]="keyword" id="ktrakm" name="ktrakm" >
-<button (click)="searchPromoCode()" style="border-radius: 4px !important; background-color:#ACD5E9; border: #ACD5E9; margin-left: 5px;" >Kiểm tra</button>
+<button (click)="searchPromoCode()" style="border-radius: 4px !important; background-color:#ACD5E9; border: #ACD5E9; margin-left: 5%" >Kiểm tra</button>
 
 </div>
 <div class="kqtimkiem">
