--- a/src/app/quydinh/quydinh.component.css
+++ b/src/app/quydinh/quydinh.component.css
@@ -1,14 +1,19 @@
+.quydinh{
+  justify-content: center;
+}
 .rule {
   border: 2px solid #D9D9D9;
   margin: 20px;
-  width: 1200px;
-  height: 700px;
+  width: 70%;
+ 
   padding: 20px;
   border-radius: 15px;
-  margin-left: 100px;
+  margin-left: 15%;
+  justify-content: center;
   }
   .tieude{
     margin: 10px;
-    margin-left: 100px;
+    margin-left: 15%;
     margin-bottom: -15px;
+    justify-content: center;
 }
