--- a/src/app/timve/timve.component.html
+++ b/src/app/timve/timve.component.html
@@ -13,19 +13,19 @@
       <div>
         <h6 style="background-color: #A5aecf;padding: 13px;margin: 3%;margin-top: -2%;border-radius:0px 90px 0px 0px; width: 500px;">Đi từ:...đến...Ngày.../.../...</h6>
       </div>
-      <div style="margin-left:5% ;margin-top: -2%;border-style:groove;border-radius:20px 20px 20px 20px;width: 450px;height: 165px;">
+      <div style="margin-left:5% ;margin-top: -2%;border-style:groove;border-radius:20px 20px 20px 20px;width: 500px;height: 170px;">
         <div style="display: flex; flex-direction: row;">
           <h6 style="font-weight: bold;margin-left:3% ;">Trạng thái toa</h6>
           <h6 style="font-weight: bold;margin-left:25% ;">Trạng thái ghế</h6>
         </div>
         <div style="display: flex; flex-direction: row;">
-          <h6 style="margin-left:3% ;margin-top: 2%;">Toa còn vé:</h6>
+          <h6 style="margin-left:3% ;margin-top: 2%; margin-bottom: 4%;">Toa còn vé:</h6>
           <button style="background-color: #d9d9d9;margin-left: 39px;height: 25px;width: 80px; border: 1px solid #d9d9d9;">Toa</button>
           <h6 style="margin-left:3% ;margin-top: 2%;">Ghế trống:</h6>
           <button style="background-color: #d9d9d9;margin-left: 24px;height: 25px;width: 80px; border: 1px solid #d9d9d9;">Số ghế</button>
         </div>
         <div style="display: flex; flex-direction: row;">
-          <h6 style="margin-left:3% ;margin-top: 2%;">Toa đang chọn:</h6>
+          <h6 style="margin-left:3% ;margin-top: 2%; margin-bottom: 4%;">Toa đang chọn:</h6>
           <button style="background-color: #7581CB;margin-left: 20px;height: 25px;width: 80px; border: 1px solid #7581CB; color: white;">Toa</button>
           <h6 style="margin-left:3% ;margin-top: 2%;font-size:80%;">Số ghế đã hết:</h6>
           <button style="background-color:red;margin-left: 20px;height: 25px;width: 80px; border: 1px solid red; color: white;">Số ghế</button>
