--- a/src/app/timve/timve.component.html
+++ b/src/app/timve/timve.component.html
@@ -1,7 +1,7 @@
 
     <title>Tìm vé</title>
   
-    <div>
+    <div class="tv">
       <h1 style="color: black;text-align:center;">Tìm vé</h1>
       <div style="background-color: #7581CB;padding: 20px;margin: 3%;margin-top: 0%;border-radius:10px 10px 10px 10px;">
         <input type="text" value="Ga đi" style="margin-left: 100px;">
