--- a/src/app/timve/timve.component.css
+++ b/src/app/timve/timve.component.css
@@ -1,3 +1,6 @@
+.tv{
+    justify-content: center;
+}
 .giohang{
   border: 2px solid #D9D9D9;
    width: 50%;;
@@ -5,6 +8,7 @@
    margin-left: 48%;
    margin-top: -14%;
    justify-content: center;
+   text-align: center;
 }
 .gio{
     border: 2px solid #D9D9D9;
@@ -15,6 +19,7 @@
     margin-top: 1%;
     margin-bottom: 1%;
     justify-content: center;
+    text-align: center;
 }
 .chuyentau{
     border: 2px solid #D9D9D9;
@@ -23,11 +28,10 @@
    border-radius: 30px;
    margin-left: 5%;
    margin-top: 3%;
-
+   text-align: center;
 }
 .lichtrinh{
     border: 2px solid #D9D9D9;
- 
     width: 93%;
     border-radius: 15px;
     margin: 30px;
@@ -37,6 +41,7 @@
     margin-bottom: 8px;
     padding: 10px;
     justify-content: center;
+    text-align: center;
 }
 .toatau{
     border: 2px solid #D9D9D9;
@@ -55,6 +60,7 @@
     margin-top: 2%;
     margin-bottom: 2%;
     padding: 15px;
+    text-align: center;
 }
 .ghe{
     border: 2px solid #D9D9D9;
@@ -73,6 +79,7 @@
     margin-left: 3%;
     margin-top: 2%;
     padding: 12px;
+    text-align: center;
 }
 .table{
 text-align: center;
