--- a/src/app/timve/timve.component.css
+++ b/src/app/timve/timve.component.css
@@ -1,91 +1,127 @@
+
+
+  
+
+  .dropDownMN{
+    margin-left: 1%;
+    margin-right: 6%;
+    height: 10px;
+    cursor: pointer;
+    height: 100%;
+  }
+  #btnKiemTra{
+    position: relative;
+  }
+  .dropDownContent{
+    margin-left: -65px;
+    display: none;
+    text-align: center;
+    background-color: #A5AECF;
+    position: fixed;
+    z-index: 1;
+  }
+  .dropDownMN:hover .dropDownContent{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+  }
+  .dropDownContent a{
+    width: 200px;
+  }
+  .dropDownContent a:hover{
+    background-color: #D7D7D7;
+  }
 .tv{
     justify-content: center;
 }
 .giohang{
-  border: 2px solid #D9D9D9;
-   width: 50%;;
-   border-radius: 25px;
+  border: 0.25vw solid #D9D9D9;
+   width: 50%;
+   height: 15vw;
+   border-radius: 2vw;
    margin-left: 48%;
-   margin-top: -14%;
+   margin-top: -15%;
    justify-content: center;
    text-align: center;
 }
 .gio{
-    border: 2px solid #D9D9D9;
-    width: 97%;
-    border-radius: 15px;
+    border: 1vw solid #D9D9D9;
+    width: 93%;
+    height: 5vw;
+    border-radius: 1.5vw;
     background-color: #D9D9D9;
-    margin-left: 1.5%;
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-left: 3%;
+    margin-top: 0.5vw;
+    margin-bottom: 1vw;
+    padding:-3vw;
     justify-content: center;
     text-align: center;
 }
 .chuyentau{
-    border: 2px solid #D9D9D9;
-   height: 500px;
-   width: 300px;;
-   border-radius: 30px;
+    border: 0.1vw solid #D9D9D9;
+   height: 42vw;
+   width: 25vw;
+   border-radius: 1vw;
    margin-left: 5%;
    margin-top: 3%;
    text-align: center;
 }
 .lichtrinh{
-    border: 2px solid #D9D9D9;
+    border: 0.1vw solid #D9D9D9;
     width: 93%;
-    border-radius: 15px;
-    margin: 30px;
+    border-radius: 1vw;
+    margin: 3vw;
     background-color: #D9D9D9;
     margin-left: 3%;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    padding: 10px;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    padding: 1vw;
     justify-content: center;
     text-align: center;
 }
 .toatau{
-    border: 2px solid #D9D9D9;
+    border: 0.1vw solid #D9D9D9;
     width: 67%;
-    border-radius: 25px;
+    border-radius: 1vw;
     margin-left: 32%;
-    margin-top: -40%;
+    margin-top: -42.5%;
     justify-content: center;
 }
 .toa{
-    border: 2px solid #D9D9D9;
+    border: 0.1vw solid #D9D9D9;
     width: 10%;
-    border-radius: 5px;
+    border-radius: 0.5vw;
     background-color: #D9D9D9;
     margin-left: 3%;
     margin-top: 2%;
     margin-bottom: 2%;
-    padding: 15px;
+    padding: 1vw;
     text-align: center;
 }
 .ghe{
-    border: 2px solid #D9D9D9;
-    height: 390px;
+    border: 0.2vw solid #D9D9D9;
+    height: 34vw;
     width: 67%;
-    border-radius: 25px;
+    border-radius: 1vw;
     margin-left: 32%;
     margin-top: 1%;
     justify-content: center;
 }
 .vtrighe{
-    border: 2px solid #D9D9D9;
+    border: 0.1vw solid #D9D9D9;
     width: 9%;
-    border-radius: 5px;
+    border-radius: 1vw;
     background-color: #D9D9D9;
     margin-left: 3%;
     margin-top: 2%;
-    padding: 12px;
+    padding: 1vw;
     text-align: center;
 }
 .table{
 text-align: center;
 }
 .btt{
-    margin: 10px;
-    margin-top: 45px;
+    margin: 1vw;
+    margin-top: -4.4vw;
     margin-left: 10%;
 }
