--- a/src/app/gio-tau-gia-ve/gio-tau-gia-ve.component.html
+++ b/src/app/gio-tau-gia-ve/gio-tau-gia-ve.component.html
@@ -19,7 +19,7 @@
         </select></td>
         <td id="tdTittle"> <p>Tàu :</p></td>
         <td id="tdInput">  <select name="Tau" id="" [(ngModel)]="Tau">
-          <option *ngFor="let hanhTrinh of DSHanhTrinh" value="{{hanhTrinh.idHanhTrinh}}">{{hanhTrinh.idHanhTrinh}}</option>
+          <option *ngFor="let hanhTrinh of DSHanhTrinh" value="{{hanhTrinh.IdLichTrinh}}">{{hanhTrinh.idLichTrinh}}</option>
         </select></td>  
       </tr>
     </table>
