--- a/src/app/test-vpn/test-vpn.component.css
+++ b/src/app/test-vpn/test-vpn.component.css
@@ -36,3 +36,41 @@
   margin: 10px;
   height: 60%;
 }
+.gheItem{
+  background-color: gray;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+.GheList{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  border: 1px solid gray;
+  width: 40%;
+  overflow-x: scroll;
+  padding: 10px;
+  height: 45%;
+  border-radius: 10px;
+}
+.GioVe{
+  width: 40%;
+  height: 300px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  align-items: center;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+.Ve{
+  width: 80%;
+  background-color: aqua;
+  text-align: center;
+  margin: 10px;
+  min-height: 50px;
+}
