--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div id="menu_container">
   <div id="menu_left">
-    <a routerLink="home" style="font-size: 20px;"><img src="https://banner2.cleanpng.com/20180305/dxq/kisspng-train-rail-transport-logo-track-high-speed-rail-train-5a9d282359f4b7.2187700215202488673685.jpg" ></a>
+    <a routerLink="home" style="font-size: 20px;"><img src="/assets/images/logo (2).png" ></a>
   </div>
   <div id="menu_right">
     <a class="mnItem" routerLink="GioTau_GiaVe">Giờ tàu - giá vé</a>
