--- a/src/app/huongdan/huongdan.component.html
+++ b/src/app/huongdan/huongdan.component.html
@@ -6,7 +6,7 @@
         <h1>Màn hình hướng dẫn hoàn vé video</h1>
         <div class="video">
             <video width="640" height="360" controls>
-                <source src="https://www.youtube.com/watch?v=ZYeqjr56vv4" >
+                <source src="/assets/images/video hướng dẫn hoàn vé.webm" >
             </video>
         </div>
     </div>
@@ -14,7 +14,7 @@
         <h1>Màn hình hướng dẫn đặt vé video</h1>
         <div class="video">
             <video width="640" height="360" controls>
-                <source src="https://www.youtube.com/watch?v=RmrgjSW1K8A" type="video/mp4">
+                <source src="/assets/images/video hướng dẫn đặt vé.mp4" type="video/mp4">
             </video>
         </div>
     </div>
